--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,8 @@
   "plugins": [
     "@typescript-eslint"
   ],
-  "root": true
+  "root": true,
+  "rules": {
+    "@typescript-eslint/ban-ts-comment": "off"
+  }
 }
