--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite src",
     "build": "tsc && vite build",
     "format": "prettier --write src",
     "lint": "eslint src",
-    "preview": "vite preview"
+    "preview": "vite preview src"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -17,5 +17,8 @@
     "prettier": "^2.6.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "ruby-head-wasm-wasi": "^0.3.0-2022-05-18-a"
   }
 }
